# sfs2-challenge

./: EXPLOITS.md  README.md
challenge/: Dockerfile  docker-compose.yml
challenge/db/: init.sql
challenge/secret-executable/: Dockerfile  barista_academy  docker-compose.yml  run_barista.bat  run_barista.sh
challenge/web/: cart.php  index.php
challenge/web/includes/: functions.php
challenge/web/intro/: index.php
challenge/web/pages/: cart.php  checkout.php  home.php  login.php  logout.php  profile.php
challenge/web/uploads/: barista_academy  shell.png.php  vuln
docs/: flags.md  vulnerabilities.md
fixed-code/barista_academy/: CMakeLists.txt  barista_academy.c
fixed-code/web/includes/: config.php  functions.php
fixed-code/web/pages/: login.php  profile.php  register.php
fixed-code/web/uploads/: flag.txt
vulnerable-code/: CMakeLists.txt  barista_academy.c  vuln.c
vulnerable-code/barista_academy/: Dockerfile  barista_academy.c  docker-compose.yml
vulnerable-code/web/: home.php
vulnerable-code/web/intro/: index.php
vulnerable-code/web/pages/: orders.php
